crates/ml2_mem/tests/ui/memenum_non_unit_variant.stderr
error: MemEnum variant `B` must be a unit variant (no fields)
  --> tests/ui/memenum_non_unit_variant.rs:11:5
   |
11 |     B(u8) = 1,
   |     ^
